[gd_scene load_steps=2 format=3 uid="uid://cbgoi4s2117e8"]

[ext_resource type="Script" path="res://src/game/main_menu.gd" id="1_jm1w6"]

[node name="Credits" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jm1w6")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 198.0
offset_top = 102.0
offset_right = -244.0
offset_bottom = -139.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 48.0
offset_bottom = 151.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Credits:

Ivan Hoffman - Lead Programming
Gavin Britton - Game Design & Programming
Re Nocturne - Narrative Designer
Monny - Art
Asher - Art
Alexander Bridges - Music Composer
Ethan Kelly - Sound Designer


"
horizontal_alignment = 1

[node name="Button" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Main Menu"

[node name="Quit" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Quit
"

[connection signal="pressed" from="Panel/VBoxContainer/Button" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
