[gd_scene load_steps=9 format=3 uid="uid://dq52ajbqcbdul"]

[ext_resource type="Script" path="res://src/game/main_menu.gd" id="1_kcjal"]
[ext_resource type="AudioStream" uid="uid://c5bd2272m5wwu" path="res://assets/Audio/Music/01 Dear Teeny Tiny Diary.ogg" id="2_w6r4f"]
[ext_resource type="AudioStream" uid="uid://bnrt4h6it8djl" path="res://assets/Audio/SFX/sfx_ui_mainmenu_play.wav" id="3_mo32o"]
[ext_resource type="AudioStream" uid="uid://chfeaxohyj7hp" path="res://assets/Audio/SFX/sfx_ui_mainmenu_buttonhover.wav" id="4_ype6g"]
[ext_resource type="AudioStream" uid="uid://di8wbughi20yt" path="res://assets/Audio/SFX/sfx_ui_mainmenu_opening.wav" id="5_i8cpw"]
[ext_resource type="AudioStream" uid="uid://bgifg66ssmwgx" path="res://assets/Audio/SFX/sfx_ui_mainmenu_quit.wav" id="6_4cx4w"]
[ext_resource type="AudioStream" uid="uid://crheaaj5fxdbu" path="res://assets/Audio/SFX/sfx_ui_mainmenu_buttonclick.wav" id="7_gl0g5"]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_dimv8"]
random_pitch = 1.2
streams_count = 1
stream_0/stream = ExtResource("4_ype6g")
stream_0/weight = 1.0

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kcjal")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 198.0
offset_top = 102.0
offset_right = -244.0
offset_bottom = -139.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 48.0
offset_bottom = 151.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "





Main Menu"
horizontal_alignment = 1

[node name="Button" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Start Game
"

[node name="Credits" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Credits
"

[node name="Quit" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Quit
"

[node name="Audio" type="Node" parent="."]

[node name="music_mainmenu" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("2_w6r4f")
bus = &"Music"

[node name="sfx_ui_mainmenu_play" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("3_mo32o")

[node name="sfx_ui_mainmenu_buttonhover" type="AudioStreamPlayer" parent="Audio"]
stream = SubResource("AudioStreamRandomizer_dimv8")
volume_db = -14.055
max_polyphony = 4

[node name="sfx_ui_mainmenu_opening" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("5_i8cpw")
volume_db = -11.243

[node name="sfx_ui_mainmenu_quit" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("6_4cx4w")

[node name="sfx_ui_mainmenu_buttonclick" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("7_gl0g5")

[node name="sfx_ui_mainmenu_credits" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("7_gl0g5")

[connection signal="mouse_entered" from="Panel/VBoxContainer/Button" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="Panel/VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="mouse_entered" from="Panel/VBoxContainer/Credits" to="." method="_on_credits_mouse_entered"]
[connection signal="pressed" from="Panel/VBoxContainer/Credits" to="." method="_on_credits_pressed"]
[connection signal="mouse_entered" from="Panel/VBoxContainer/Quit" to="." method="_on_quit_mouse_entered"]
[connection signal="pressed" from="Panel/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="finished" from="Audio/sfx_ui_mainmenu_play" to="." method="_on_sfx_ui_mainmenu_play_finished"]
[connection signal="finished" from="Audio/sfx_ui_mainmenu_opening" to="." method="_on_sfx_ui_mainmenu_opening_finished"]
[connection signal="finished" from="Audio/sfx_ui_mainmenu_quit" to="." method="_on_sfx_ui_mainmenu_quit_finished"]
[connection signal="finished" from="Audio/sfx_ui_mainmenu_credits" to="." method="_on_sfx_ui_mainmenu_credits_finished"]
